tenants/anami/prod/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anami-backend
  namespace: anami-masoterapia-prod
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: anami-backend
  template:
    metadata:
      labels:
        app: anami-backend
    spec:
      # Este contenedor corre ANTES que la app para actualizar la DB
      containers:
      - name: backend
        image: ikedaharket/anami-backend:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: anami-backend-svc
  namespace: anami-masoterapia-prod
spec:
  selector:
    app: anami-backend
  ports:
  - port: 80
    targetPort: 3000
