tenants/anami/prod/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: anami-backend-ingress
  namespace: anami-masoterapia-prod
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect-https@kubernetescrd
spec:
  tls:
  - hosts:
    - api.temucomasajes.cl # Tu dominio real
    secretName: api-temucomasajes-tls
  rules:
  - host: api.temucomasajes.cl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: anami-backend-svc
            port:
              number: 80
